Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34814

MousePress event which closes a popupWidget passed to another widget

XMLWordPrintable

    • 738c07542a0bbf867661520559fed9feda985935

      Steps to reproduce:
      1. Open any kind of popupWidget (e.g. a Menu) which should grab the mouse
      2. Click outside the popup to close the popupWidget preferable on another widget
      3. Widget under cursor reacts to the mouse event

      This is a regression in comparison to Qt 4.8.

      Attached is a small QTest which illustrates the issue. It uses XTest to simulate the problem. There are two .pro files, one for qt4 and one for qt5. The test succeeds for Qt4, but fails for qt5.

        1. popup-test.tar
          10 kB
          Martin Gräßlin
        For Gerrit Dashboard: QTBUG-34814
        # Subject Branch Project Status CR V

            avolkov Alexander Volkov
            mgraesslin Martin Gräßlin
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes